# verloop-hiring-assessment

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
geocodingapibackend/: __init__.py  __main__.py  api_doc.yml  geoCodedResponse.py  schemaValidation.py  settings.py
geocodingapibackend/routes/: error.py
tests/: test_geocodingapibackend.py
