[tool.poetry]
name = "geocodingapibackend"
version = "0.1.0"
description = ""
authors = ["kumar Prateek <kumarprateek902@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
python-dotenv = "^0.21.0"
requests = "^2.28.1"
dicttoxml = "^1.7.4"
flasgger = "^0.9.5"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
